--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 </head>
 
 <body style="background-color:black;">
@@ -30,8 +31,7 @@
 	</div>
 
 	<!-- SCRIPT -->
-	<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
- 	<script type="text/javascript">
+	<script type="text/javascript">
 
 	//Button create
  	var gifArray = ["Michael Jackson", "Oprah Winfrey", "George Clooney", "Priyanka Chopra", "Aariana Grande", "Briteny Spears","Kim Kardashian", "Naomi Campbell", "Diana Ross", "Prince"];
